--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -17,26 +17,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:title="Home" />
-        <item
-            android:id="@+id/nav_messages"
-            android:title="Messages" />
+
+
         <item
             android:id="@+id/nav_friends"
-            android:title="Friends" />
+            android:title="Mis Preguntas" />
         <item
-            android:id="@+id/nav_discussion"
-            android:title="Discussion" />
+            android:id="@+id/nav_messages"
+            android:title="Mis Respuestas" />
+        <item
+            android:id="@+id/nav_home"
+            android:title="Mis Recompensas" />
+
     </group>
 
     <item android:title="Sub items">
         <menu>
             <item
-                android:title="Sub item 1" />
-            <item
-                android:title="Sub item 2" />
+                android:title="Mis Anuncios" />
+
         </menu>
     </item>
 
