--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_view"
-        android:background="#05a9f4" />
+        app:menu="@menu/drawer_view" />
 
 </android.support.v4.widget.DrawerLayout>
