Agregar Activity para hacer pregunta
Al dar click en el FloatingActionButton se abre la ventana para hacer pregunta.
En el menu estan las opciones para adjuntar y enviar. Para enviar se valida la
pregunta para mostrar los mensajes de error. Si no hay errores, se regresa a la
ventana anterior.

Se agregaron nuevas dependencias en gradle para el MaterialBetterSpinner y
MaterialEditText

--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -20,17 +20,19 @@
 
 
         <item
-            android:id="@+id/nav_friends"
+            android:id="@+id/nav_preguntas"
             android:title="Mis Preguntas" />
         <item
-            android:id="@+id/nav_messages"
+            android:id="@+id/nav_respuestas"
             android:title="Mis Respuestas" />
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_recompensas"
             android:title="Mis Recompensas" />
-
+        <item
+            android:id="@+id/nav_anuncios"
+            android:title="Mis Anuncios" />
     </group>
-
+<!--
     <item android:title="Sub items">
         <menu>
             <item
@@ -38,5 +40,5 @@
 
         </menu>
     </item>
-
+ -->
 </menu>
