--- a/app/src/main/res/layout/pregunta_text.xml
+++ b/app/src/main/res/layout/pregunta_text.xml
@@ -61,6 +61,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
+                android:gravity="center_horizontal"
                 android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/upvote"
@@ -69,7 +70,7 @@
                     android:src="@drawable/ic_thumb_up"/>
                 <TextView
                     android:id="@+id/points"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textSize="22sp"
@@ -99,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
+                android:textColor="@color/colorPrimary"
                 android:text="#Algoritmos"
                 />
             <TextView
