--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary"> #03a9f4</color>
     <color name="colorPrimaryDark">#0288d1</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="upvote">#4CAF50</color>
+    <color name="downvote">#E53935</color>
+    <color name="neutral">#aaa</color>
 </resources>
