Mostrar pregunta con sus respuestas

--- a/app/src/main/res/layout/pregunta_text.xml
+++ b/app/src/main/res/layout/pregunta_text.xml
@@ -16,101 +16,8 @@
         card_view:cardElevation="0dp"
         card_view:cardMaxElevation="0dp"
         android:layout_height="wrap_content">
-        <RelativeLayout
-            android:id="@+id/pregunta_header"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/mk_default_user_img"
-                android:layout_marginRight="8dp"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/avatar"
-                android:layout_height="wrap_content">
-                 <TextView
-                    android:id="@+id/pregunta_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="21sp"
-                    android:text="Como funciona Quicksort?"
-                    />
-                <TextView
-                    android:id="@+id/username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:text="ferecamp"
-                    />
-            </LinearLayout>
-        </RelativeLayout>
-        <LinearLayout
-            android:id="@+id/pregunta_body"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:id="@+id/upvote"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_thumb_up"/>
-                <TextView
-                    android:id="@+id/points"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="22sp"
-                    android:text="0"/>
-                <ImageView
-                    android:id="@+id/downvote"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_thumb_down"/>
-            </LinearLayout>
-            <TextView
-                android:id="@+id/pregunta_summary"
-                android:layout_width="match_parent"
-                android:paddingLeft="10dp"
-                android:layout_height="wrap_content"
-                android:text="Tengo que implementar quicksort en C. Alguien me puede ayudar con el codigo?"
-                />
-        </LinearLayout>
-        <FrameLayout
-            android:id="@+id/pregunta_footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-            <TextView
-                android:id="@+id/materia"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:textColor="@color/colorPrimary"
-                android:text="#Algoritmos"
-                />
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:text="Hace 2 horas"
-                />
-        </FrameLayout>
-
+        <include layout="@layout/score_card_header" />
+        <include layout="@layout/score_item_body" />
+        <include layout="@layout/score_card_footer" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
