Layouts de votos modificado y arreglos del anterior commit

--- a/app/src/main/res/layout/anuncio_item.xml
+++ b/app/src/main/res/layout/anuncio_item.xml
@@ -76,8 +76,8 @@
                     android:text="@string/editar_btn"
                     android:textStyle="bold"
                     android:textColor="@color/cardText"
-                    android:drawableLeft="@drawable/ic_send_black"
-                    android:drawableStart="@drawable/ic_send_black"
+                    android:drawableLeft="@drawable/ic_create_black_24dp"
+                    android:drawableStart="@drawable/ic_create_black_24dp"
                     android:background="@color/cardBackground"
                     android:alpha="0.7"
                     android:paddingStart="50sp"
