Arreglos en menu lateral

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -24,11 +24,11 @@
     android:orientation="vertical"
     android:gravity="bottom">
 
+    <include layout="@layout/menu_info_usuario" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Usuario"
-
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20dp" />
 
