--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,13 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
         <item
             android:state_pressed="true"
-            android:color="@color/colorAccent"
-            android:textColor="@color/cardBackground"
+            android:drawable="@color/colorAccent"
             />
 
         <item
             android:state_pressed="false"
-            android:color="@color/neutral"
-            android:textColor="@color/cardText"
+            android:drawable="@color/cardBackground"
             />
 </selector>
