--- a/app/src/main/res/menu/sample_actions.xml
+++ b/app/src/main/res/menu/sample_actions.xml
@@ -20,5 +20,6 @@
         android:id="@+id/action_search"
         android:title="search"
         android:icon="@drawable/ic_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 </menu>
