Arreglos en interfaz
Se visualiza el número de respuestas en el activity de pregunta_detail

Agregue la clase usuario, anuncio, recompensa.

Y agregue unos usuarios en Crear Pregunta, los usuarios se asocian con las respuestas y preguntas, agregandolas a una lista.

--- a/app/src/main/res/layout/score_card_header.xml
+++ b/app/src/main/res/layout/score_card_header.xml
@@ -22,15 +22,9 @@
                     android:id="@+id/pregunta_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="21sp"
+                    android:textSize="16sp"
                     android:text="Como funciona Quicksort?"
-                    />
-                <TextView
-                    android:id="@+id/username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:text="ferecamp"
+                     android:textStyle="bold"
                     />
             </LinearLayout>
         </RelativeLayout>
