--- a/app/src/main/res/layout/pregunta_detail_item.xml
+++ b/app/src/main/res/layout/pregunta_detail_item.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/respuestas_new"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="NUEVA"
+                android:text="RESPONDER"
                 android:textColor="@color/upvote"
                 android:textStyle="bold"
                 android:clickable="true"
