--- a/app/src/main/res/layout/respuesta_item.xml
+++ b/app/src/main/res/layout/respuesta_item.xml
@@ -12,6 +12,7 @@
         android:clickable="true"
         android:paddingRight="18dp"
         android:orientation="vertical">
+        <include layout="@layout/respuesta_header" />
         <include layout="@layout/score_item_body" />
         <include layout="@layout/score_card_footer" />
     </LinearLayout>
