Enviar fotos en preguntas y respuestas
Agregar Monkey UI Kit como dependencia para tomar la foto.
Agregar actionitembadge como dependencia para mostrar badges en el icono de
adjuntos.
Agregar permisos de escritura en SD y camara.

--- a/app/src/main/res/menu/editor_actions.xml
+++ b/app/src/main/res/menu/editor_actions.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_attach"
         android:title="Adjuntar"
-        android:icon="@drawable/ic_attach"
+        app:actionLayout="@layout/menu_action_item_badge"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_send"
