--- a/app/src/main/res/layout/anuncio_item.xml
+++ b/app/src/main/res/layout/anuncio_item.xml
@@ -64,41 +64,7 @@
                 android:paddingLeft="10sp"
                 android:paddingTop="5sp"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/anuncio_body">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/imageButtonAnuncio1"
-                    android:text="@string/editar_btn"
-                    android:textStyle="bold"
-                    android:textColor="@color/cardText"
-                    android:drawableLeft="@drawable/ic_create_black_24dp"
-                    android:drawableStart="@drawable/ic_create_black_24dp"
-                    android:background="@color/cardBackground"
-                    android:alpha="0.7"
-                    android:paddingStart="50sp"
-                    android:paddingEnd="50sp" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/imageButtonAnuncio2"
-                    android:layout_weight="1"
-                    android:text="@string/eliminar_btn"
-                    android:textStyle="bold"
-                    android:textColor="@color/cardText"
-                    android:drawableLeft="@drawable/ic_delete"
-                    android:drawableStart="@drawable/ic_delete"
-                    android:background="@color/cardBackground"
-                    android:alpha="0.7"
-                    android:paddingStart="40sp"
-                    android:paddingEnd="40sp" />
-
-            </LinearLayout>
+            <include layout="@layout/edit_footer" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
