Mostrar fotos con proporciones reales
Las fotos ya se muestran en las respuestas tambien.
La foto a usar esta en su propio layout photo_item.xml
usar adjustViewBounds = true para poner la proporcion de la imagen en el
imageview
Arreglar los controles de upvote/downvote.

--- a/app/src/main/res/layout/pregunta_detail_item.xml
+++ b/app/src/main/res/layout/pregunta_detail_item.xml
@@ -12,9 +12,11 @@
                 android:clickable="true"
                 android:paddingRight="18dp"
                 android:orientation="vertical"
+                android:gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <include layout="@layout/score_item_body" />
+                <include layout="@layout/photo_item" />
                 <include layout="@layout/score_card_footer" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
