--- a/app/src/main/res/layout/score_toolbar_header.xml
+++ b/app/src/main/res/layout/score_toolbar_header.xml
@@ -9,9 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="21sp"
+        android:textSize="18sp"
         android:ellipsize="end"
         android:layout_marginRight="6dp"
         android:text="Como funciona Quicksort?"
+         android:layout_marginBottom="6dp"
         />
 </LinearLayout>
