--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,14 +28,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Usuario"
+        android:text="Leonardo Eras"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="usuario@espol.edu.ec"
+        android:text="leras@espol.edu.ec"
         android:id="@+id/textView" />
 
 </LinearLayout>
