--- a/app/src/main/res/layout/score_card_header.xml
+++ b/app/src/main/res/layout/score_card_header.xml
@@ -4,27 +4,13 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/avatar"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/mk_default_user_img"
-                android:layout_marginRight="8dp"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/avatar"
-                android:layout_height="wrap_content">
                  <TextView
                     android:id="@+id/pregunta_title"
+                     android:layout_marginLeft="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:text="Como funciona Quicksort?"
                      android:textStyle="bold"
                     />
-            </LinearLayout>
         </RelativeLayout>
